Pipeline/javax_imageio_stream/javax_imageio_streamOutputResult.txt
Sample: FileImageInputStream_2
----------------------------------------------------------------
================================================================

Sample: FileImageOutputStream_1
----------------------------------------------------------------
================================================================

Sample: FileImageOutputStream_3
----------------------------------------------------------------
================================================================

Sample: FileImageOutputStream_5
----------------------------------------------------------------
================================================================

Sample: ImageInputStreamImpl_1
----------------------------------------------------------------
output:
./javax_imageio_stream/javaFiles/ImageInputStreamImpl_1.java:6: error: ImageInputStreamImpl is abstract; cannot be instantiated
        ImageInputStreamImpl imageInputStream = new ImageInputStreamImpl();
                                                ^
1 error


================================================================

Sample: ImageInputStreamImpl_2
----------------------------------------------------------------
output:
./javax_imageio_stream/javaFiles/ImageInputStreamImpl_2.java:6: error: ImageInputStreamImpl is abstract; cannot be instantiated
        ImageInputStreamImpl imageInputStream = new ImageInputStreamImpl();
                                                ^
1 error


================================================================

Sample: ImageInputStreamImpl_3
----------------------------------------------------------------
output:
./javax_imageio_stream/javaFiles/ImageInputStreamImpl_3.java:7: error: ImageInputStreamImpl is abstract; cannot be instantiated
            ImageInputStreamImpl imageInputStream = new ImageInputStreamImpl();
                                                    ^
1 error


================================================================

Sample: ImageOutputStreamImpl_5
----------------------------------------------------------------
output:
./javax_imageio_stream/javaFiles/ImageOutputStreamImpl_5.java:6: error: ImageOutputStreamImpl is abstract; cannot be instantiated
        ImageOutputStreamImpl outputStream = new ImageOutputStreamImpl();
                                             ^
1 error


================================================================

Sample: MemoryCacheImageInputStream_2
----------------------------------------------------------------
output:
./javax_imageio_stream/javaFiles/MemoryCacheImageInputStream_2.java:7: error: constructor MemoryCacheImageInputStream in class MemoryCacheImageInputStream cannot be applied to given types;
            MemoryCacheImageInputStream inputStream = new MemoryCacheImageInputStream();
                                                      ^
  required: InputStream
  found:    no arguments
  reason: actual and formal argument lists differ in length
1 error


================================================================

